[package]
name = "airline-macros"
description = "Macros for Airline"
version = "0.1.0"
edition = "2021"
authors = ["Jackson Zamorano"]
homepage = "https://github.com/jacksonzamorano/airline-macros"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
